--- a/style.css
+++ b/style.css
@@ -19,7 +19,11 @@ body {
     margin: 0;
     padding: 0;
 }
-
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100dvh;
+}
 header {
     background-color: var(--secondary-bg-txt-color);
     padding: 10px;
@@ -31,16 +35,29 @@ header .logo_nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 30px;
 }
+
 
 header .logo {
     height: 40px;
     width: 40px;
+    display: flex;
+    font-size: 14px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: white;
+}
+.logo img{
+  width: 10px;
+  height: 10px;
 }
 
 nav ul {
     display: flex;
-    gap: 10px;
+    gap: 20px;
 
 }
 
@@ -48,6 +65,27 @@ nav ul li a {
     font-size: 18px;
     color: var(--bg-text-color);
     text-decoration: none;
+    position: relative;
+}
+
+
+nav ul li ::after {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    top: 25px;
+    width: 0%;
+    content: '.';
+    color: transparent;
+    background: #aaa;
+    height: 1px;
+    transition: all .3s;
+}
+
+nav ul li a:hover::after {
+    width: 100%;
 
 }
 
@@ -84,7 +122,7 @@ nav ul li {
     letter-spacing: 2px;
 }
 
-.btn{
+.btn {
     max-width: 150px;
     height: 40px;
     background-color: var(--btn-color);
@@ -153,13 +191,15 @@ nav ul li {
     place-items: center;
     padding: 50px 20px;
 }
+
 .action_btn {
     display: flex;
     align-items: center;
     justify-content: center;
     padding-top: 30px;
 }
-.action_btn_container{
+
+.action_btn_container {
     margin: 20px 50px;
     color: var(--primary-text-color);
     display: flex;
@@ -172,14 +212,16 @@ nav ul li {
     background-color: var(--btn-color);
 }
 
-.action_desc .main_text{
+.action_desc .main_text {
     font-size: 24px;
     font-weight: bolder;
     margin-bottom: 5px;
 }
+
 .action_btn p {
     letter-spacing: 0.2px;
 }
+
 .action_btn .btn {
     width: 150px;
 }
@@ -190,5 +232,63 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60px;
+    min-height: 40px;
+}
+@media screen and (max-widht: 700px) {
+  
+    .description_image{
+        flex-direction: column;
+        gap: 20px;
+    }
+    .image {
+        margin-top: 20px;
+       
+    }
+    .image img {
+        width: 200px;
+        height: auto;
+    }
+    
+}
+@media screen and (max-width: 480px) {
+   .header {
+    padding: 20px 80px;
+   }
+   
+    .logo_nav{
+        align-items: center;
+        flex-direction: column; 
+        gap: 20px;
+   }
+    .description_image{
+        flex-direction: column;
+    }
+    .image {
+        margin-top: 20px;
+        padding: 20px;
+    }
+    .image img{
+      width: 300px;
+    }
+    .panels {
+        flex-direction: column;
+        gap: 10px;
+    }
+    .quotes {
+        font-size: 1.5rem;
+        margin-top: 20px;
+    }
+    .action_btn_container {
+        flex-direction: column;
+        gap: 30px;
+    }
+    .main_text {
+        margin-bottom: 8px;
+    }
+  }
+@media  screen and (max-width: 300px) {
+    .image img {
+        width: 200px;
+        margin-right: 20px;
+        }
 }
